<resources>
    <string name="app_name">B2M</string>
    <string name="slogan">Tus productos, más cerca de ti</string>
    <!-- strings login -->
    <string name="hintTelefono">Número de teléfono</string>
    <string name="hintContrasenia">Contraseña</string>
    <string name="hintNombre">Nombre</string>
    <string name="celularDisney">0960137609</string>
    <string name="contraseniaDisney">123</string>
    <string name="nombreDisney">Disney</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CATEGORIAS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_producto">nombre Producto</string>
    <string name="imagendelproducto">imagendelproducto</string>
    <string name="_1_000">1,000</string>
    <string name="descripcion_del_producto">descripcion del producto</string>
    <!--<string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>-->
    <string name="forgot_pwd"><u>Olvidé mi contraseña</u></string>
    <string name="facebook_app_id">386136041987682</string>
    <string name="facebook_login_protocol_name">fb386136041987682</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">2adbfec422d78bb9a85a6bb482338602</string>
    <string name="google_place_api">AIzaSyCFRY-knPZg-icqg_0-664RnFGq08QkKFk</string>


</resources>
