<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".SingIn">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTelefono"
            android:inputType="phone"
            android:maxLength="10"
            android:text="@string/celularDisney"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintContrasenia"
            android:inputType="textPassword"
            android:maxLength="10"
            android:text="@string/contraseniaDisney"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.rey.material.widget.CheckBox
                android:id="@+id/ckbRemember"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Material.Drawable.CheckBox"
                android:text="Recordarme"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                app:cbd_strokeColor="@android:color/white"
                app:cbd_tickColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/txtForgotPwd"
                android:textColor="@android:color/white"
                android:text="@string/forgot_pwd"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnSingIn"
        android:text="Ingresar"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:fButtonColor="@color/btnSingActive"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"
        />


</RelativeLayout>