<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".SingUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTelefono"
            android:inputType="phone"
            android:maxLength="10"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNombre"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintContrasenia"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etSecureCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Código de seguridad"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp" />

    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnSingUp"
        android:text="Registrarse"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:fButtonColor="@color/btnSingUp"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"
        />

</RelativeLayout>